--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#ACD54D</color>
+    <color name="green_2">#9FCA3D</color>
+    <color name="light_gray">#ECE4E4</color>
 </resources>
