--- a/app/src/main/res/layout/activity_worry.xml
+++ b/app/src/main/res/layout/activity_worry.xml
@@ -7,6 +7,13 @@
     tools:context=".project.WorryActivity">
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/bottledisplay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="50dp"
+        tools:layout_editor_absoluteY="527dp" />
+
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
@@ -154,10 +161,11 @@
         android:id="@+id/txt_my_bottles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="24dp"
         android:text="my bottles"
         app:layout_constraintBottom_toTopOf="@+id/input_worry_layout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Switch
