--- a/app/src/main/res/layout/item_bottle.xml
+++ b/app/src/main/res/layout/item_bottle.xml
@@ -34,9 +34,9 @@
         android:id="@+id/imageView"
         android:layout_width="90dp"
         android:layout_height="99dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bottle"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteX="0dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
