--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -20,30 +20,37 @@
 
     <ImageView
         android:id="@+id/friend_picture"
-        android:layout_width="93dp"
-        android:layout_height="86dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/letter"/>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FROM / TO:  "
+        android:paddingLeft="20dp"
+        android:fontFamily="@font/dancing_script"
+        android:textSize="16dp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/friend_picture"
+        app:layout_constraintStart_toEndOf="@+id/friend_picture"
+        app:layout_constraintTop_toTopOf="@+id/friend_picture" />
 
     <TextView
         android:id="@+id/friend_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="friend name:"
-        app:layout_constraintStart_toEndOf="@+id/friend_picture"
+        android:text="friend name"
+        android:fontFamily="@font/dancing_script"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/friend_picture"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toTopOf="@+id/friend_picture" />
 
-    <TextView
-        android:id="@+id/friend_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="status: "
-        app:layout_constraintStart_toEndOf="@+id/friend_picture"
-        app:layout_constraintTop_toBottomOf="@+id/friend_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
