--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -6,16 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".project.FriendActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/frienddisplay"
-        android:layout_width="406dp"
-        android:layout_height="595dp"
-        android:layout_marginTop="32dp"
-        android:scrollbars="vertical"
+    <TextView
+        android:id="@+id/tvFriends"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dancing_script"
+        android:text="-----------  MY MAILBOX  -----------"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:paddingVertical="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/frienddisplay"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/navbar"
+        app:layout_constraintTop_toBottomOf="@+id/tvFriends"/>
 
     <View
         android:id="@+id/divider2"
@@ -130,15 +140,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/txt_friend_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Friends List"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/frienddisplay"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
