--- a/app/src/main/res/layout/item_bottle.xml
+++ b/app/src/main/res/layout/item_bottle.xml
@@ -3,40 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemId"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="10dp">
 
-
-    <TextView
-        android:id="@+id/bottlecontent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:text="Content"
-        android:textSize="16dp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/divider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
+    <ImageView
+        android:id="@+id/imgBoard"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/board" />
+
+
+<!--    <View-->
+<!--        android:id="@+id/divider"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:background="?android:attr/listDivider"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="parent" />-->
+
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="90dp"
         android:layout_height="99dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bottle"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imgBoard"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imgBoard"
+        app:layout_constraintTop_toTopOf="@+id/imgBoard"
+        app:layout_constraintVertical_bias="0.45000002"
+        app:srcCompat="@drawable/bottle" />
+
+
+    <TextView
+        android:id="@+id/bottlecontent"
+        android:layout_width="250dp"
+        android:layout_height="113dp"
+        android:gravity="center_vertical"
+        android:fontFamily="@font/dancing_script"
+        android:text="A font family  details. danfd fdsajk fdsjkalf fdsjkl fdsajl fdsjlk sfdsafd sa fdsa e ds a fdsa fdsa fdsafds fdsafda  Android, you can create a new font family as an XML resource and access it as a single unit,"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:ellipsize="end"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        tools:ignore="MissingConstraints" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
