--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -24,9 +24,10 @@
             android:id="@+id/friendContent"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/dancing_script"
             android:padding="15dp"
             android:text="bottle content"
-            android:textColor="@color/purple_500"
+            android:textColor="#10100F"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,8 +40,9 @@
             android:layout_width="105dp"
             android:layout_height="49dp"
             android:layout_marginBottom="32dp"
-            android:background="@color/purple_500"
+            android:background="#CEDCAD"
             android:elevation="15dp"
+            android:fontFamily="@font/dancing_script"
             android:gravity="center"
             android:padding="10dp"
             android:text="Connect"
@@ -57,7 +59,8 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bottle Content"
+            android:fontFamily="@font/dancing_script"
+            android:text="This Bottle"
             app:layout_constraintBottom_toTopOf="@+id/friendContent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
