--- a/app/src/main/res/layout/item_create.xml
+++ b/app/src/main/res/layout/item_create.xml
@@ -25,6 +25,7 @@
             android:id="@+id/input_worry"
             android:layout_width="192dp"
             android:layout_height="60dp"
+            android:fontFamily="@font/dancing_script"
             android:hint="write your worries"
             app:layout_constraintBottom_toTopOf="@+id/switch_is_public"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="save"
+            android:fontFamily="@font/dancing_script"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +54,7 @@
             android:layout_height="wrap_content"
             android:minHeight="48dp"
             android:text="public"
+            android:fontFamily="@font/dancing_script"
             app:layout_constraintBottom_toTopOf="@+id/btn_save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
